# AggSDL2Android

./: .deepsource.toml  README.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Application.mk  CMakeLists.txt
app/src/main/cpp/agg-2.5/: Android.mk
app/src/main/cpp/agg-2.5/include/: agg_renderer_outline_aa.h
app/src/main/cpp/agg-2.5/src/platform/sdl2/: agg_platform_support.cpp
app/src/main/java/com/hzy/agg/demo/: MainActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
